--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="rules-content">
       <h2>Game Rules</h2>
       <p>
-        Welcome to To Say or Not to Say. The default version of this game is 'Don't Say 13', which 
+        Welcome to <u>To Say or Not to Say</u>. The default version of this game is 'Don't Say 13', which 
         you can go to by directly pressing the Start Game button []. This is a two player game, and the aim is to either
         not land on (Don't Say mode) or land on (Say mode) the number specified in the second dropdown. Once this number
         is hit, the game ends. On each turn, you can add on to the number your opponent leaves you with, 
