--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div id="game-wrapper">
   <!-- First page title with info button -->
   <div id="title-container" style="display: flex; align-items: center; justify-content: center; gap: 8px; position: relative;">
     <h1 id="main-title">To Say or Not to Say a Number</h1>
@@ -90,5 +91,6 @@
   </main>
 
   <script src="script.js"></script>
+</div>
 </body>
 </html>
