--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
       <h2>Game Rules</h2>
       <p>
         Welcome to <u>To Say or Not to Say</u>. The default version of this game is 'Don't Say 13', which 
-        you can go to by directly pressing the Start Game button []. This is a two player game, and the aim is to either
-        not land on (Don't Say mode) or land on (Say mode) the number specified in the second dropdown. Once this number
+        you can go to by directly pressing the Start Game button. <img src="images/start_game.png" alt="start game" style="display: block; margin: 1rem auto; max-width: 50%; height: auto;" /> 
+        This is a two-player game, and the aim is to either
+        <i>not land on</i> (Don't Say mode) or <i>land on</i> (Say mode) the number specified in the second dropdown. Once this number
         is hit, the game ends. On each turn, you can add on to the number your opponent leaves you with, 
-        by pressing one of the say buttons []. The largest value is what is being referred to as the increment. 
+        by pressing one of the say buttons: <img src="images/adding.png" alt="adding" style="display: block; margin: 1rem auto; max-width: 105%; height: auto;" /> Since 2 has been 'said', 
+        two more number boxes are added and the current number becomes 5. Remember to keep an eye on which game you're playing.
+        For instance, this game is a loss for the second player, <img src="images/2ndloss.png" alt="loss" style="display: block; margin: 1rem auto; max-width: 50%; height: auto;" />
+        but the <strong>exact</strong> same game nows lead to a win! <img src="images/2ndwin.png" alt="win" style="display: block; margin: 1rem auto; max-width: 50%; height: auto;" />
       </p>
-      <button id="close-rules-btn" aria-label="Close Rules">Close</button>
+      <!-- Removed Close Button as per request -->
     </div>
   </div>
 
@@ -46,7 +50,7 @@
       </label>
 
       <label>
-        Which number?
+        Which number?:
         <input type="number" id="target-number" min="1" max="100" value="13">
       </label>
 
