--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         is hit, the game ends. On each turn, you can add on to the number your opponent leaves you with, 
         by pressing one of the say buttons: <img src="images/adding.png" alt="adding" style="display: block; margin: 1rem auto; max-width: 105%; height: auto;" /> Since 2 has been 'said', 
         two more number boxes are added and the current number becomes 5. Remember to keep an eye on which game you're playing.
-        For instance, this game is a loss for the second player, <img src="images/2ndloss.png" alt="loss" style="display: block; margin: 1rem auto; max-width: 50%; height: auto;" />
-        but the <strong>exact</strong> same game nows lead to a win! <img src="images/2ndwin.png" alt="win" style="display: block; margin: 1rem auto; max-width: 50%; height: auto;" />
+        For instance, this game is a loss for the second player, <img src="images/2ndloss.png" alt="loss" style="display: block; margin: 1rem auto; max-width: 80%; height: auto;" />
+        but the exact same game nows lead to a win! <img src="images/2ndwin.png" alt="win" style="display: block; margin: 1rem auto; max-width: 80%; height: auto;" />
       </p>
       <!-- Removed Close Button as per request -->
     </div>
