final touches for zoom

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
     <!-- Title and Info Button -->
     <div id="title-container" style="display: flex; align-items: center; justify-content: center; gap: 8px; position: relative;">
-      <h1 id="main-title"><strong>To Say or Not to Say a Number</strong></h1>
+      <h1 id="main-title">To Say or Not to Say a Number!</h1>
       <button id="info-button" aria-label="Game Rules">i</button>
     </div>
 
     <!-- Setup Screen -->
     <div id="setup-screen" class="setup-screen">
-      <h2>CONFIGURE!</h2>
+      <h2>CONFIGURE:</h2>
 
       <label>
         Say or Don't Say:
