select button text

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div id="game-mode-row" class="dropdown-row">
           <label for="game-mode"><strong>Game Mode:</strong></label>
           <select id="game-mode" onchange="chooseGameMode()">
-            <option value="">- Select -</option>
+            <option value=""> SELECT </option>
             <option value="pvp">2 Player</option>
             <option value="easy">Easy AI</option>
             <option value="hard">Hard AI</option>
@@ -78,7 +78,7 @@
         <div id="first-move-row" class="dropdown-row hidden">
           <label for="first-player"><strong>Turn Options:</strong></label>
           <select id="first-player" onchange="confirmFirstPlayer()">
-            <option value="">- Select -</option>
+            <option value=""> SELECT </option>
             <option value="you">First</option>
             <option value="ai">Second</option>
           </select>
