--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>To Say or Not to Say a Number</title>
+  <title>To Say or Not to Say a Number!</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Montserrat:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -12,17 +12,21 @@
   <!-- Rules Modal - over entire screen -->
   <div id="rules-modal" class="hidden">
     <div id="rules-content">
-      <h2>Game Rules</h2>
+      <h2>Rules of Play</h2>
       <p>
         Welcome to <u>To Say or Not to Say</u>. The default version of this game is 'Don't Say 13', which 
         you can go to by directly pressing the Start Game button. <img src="images/start_game.png" alt="start game" style="display: block; margin: 1rem auto; max-width: 50%; height: auto;" /> 
         This is a two-player game, and the aim is to either
         <i>not land on</i> (Don't Say mode) or <i>land on</i> (Say mode) the number specified in the second dropdown. Once this number
         is hit, the game ends. On each turn, you can add on to the number your opponent leaves you with, 
-        by pressing one of the say buttons: <img src="images/adding.png" alt="adding" style="display: block; margin: 1rem auto; max-width: 105%; height: auto;" /> Since 2 has been 'said', 
+        by pressing one of the say buttons: <img src="images/adding.png" alt="adding" style="display: block; margin: 1rem auto; max-width: 105%; height: auto;" /> Here, since 2 has been 'said', 
         two more number boxes are added and the current number becomes 5. Remember to keep an eye on which game you're playing.
         For instance, this game is a loss for the second player, <img src="images/2ndloss.png" alt="loss" style="display: block; margin: 1rem auto; max-width: 80%; height: auto;" />
-        but the exact same game nows lead to a win! <img src="images/2ndwin.png" alt="win" style="display: block; margin: 1rem auto; max-width: 80%; height: auto;" />
+        but the exact same game here actually leads to a win! <img src="images/2ndwin.png" alt="win" style="display: block; margin: 1rem auto; max-width: 80%; height: auto;" />
+        The number of say buttons is what we have referred to as the 'incremement', and can be adjusted in the third dropdown of the configure box on the home page. At most 10 are available for a game (as long as the 
+        number we're aiming to hit/not hit is greater). <img src="images/say_buttons.png" alt="say buttons" style="display: block; margin: 1rem auto; max-width: 80%; height: auto;" />To move between pages, buttons have been 
+        provided at the bottom. Enjoy!
+
       </p>
       <!-- Removed Close Button as per request -->
     </div>
